# ocsigen-dune-rules

./: README.md  dune-project  ocsigen-dune-rules.opam
ocsigen-dune-rules/: check_modules.ml  dune  gen_rules.ml  main.ml
test/: dune
test/app.t/: dune  dune-project  run.t
test/app.t/app/: dune  my_app.eliom
test/app.t/lib/: dune  my_lib.eliom
test/rules.t/: run.t
